--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .text-primary{
     color: #FD6E0A;
@@ -37,5 +38,27 @@ nav a{
 font-size: 20px;
 font-weight: 700;
 padding: 15px 35px;
+}
+/* header related style */
+.header{
+ background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner-greeting{
 
+}
+.banner-title{
+
+}
+.profile-photo{
+    width: 550px;
+  height: 650px;
+  flex-shrink: 0;
+}
+.banner-content{
+    
 }
