--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -42,17 +42,31 @@ padding: 15px 35px;
 /* header related style */
 .header{
  background-color: #FFF8F3;
+ background-image: url('../images/header_bg.png');
+ background-repeat: no-repeat;
+ background-position: bottom right ;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner-greeting{
-
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
 }
 .banner-title{
-
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-description{
+ margin-bottom: 30px;
+ font-size: 18px;
+ line-height: 30px;
 }
 .profile-photo{
     width: 550px;
@@ -60,5 +74,6 @@ padding: 15px 35px;
   flex-shrink: 0;
 }
 .banner-content{
-    
+  max-width: 550px;
 }
+/* main section style */
