--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,3 +77,23 @@ padding: 15px 35px;
   max-width: 550px;
 }
 /* main section style */
+
+/* about section style */
+.about{
+  padding: 130px 150px;
+  margin: 130px 0;
+  border-radius: 10px;
+background: #FFF8F3;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    line-height: 30px;
+}
