--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,7 +77,10 @@ padding: 15px 35px;
   max-width: 550px;
 }
 /* main section style */
-
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
 /* about section style */
 .about{
   padding: 130px 150px;
@@ -96,4 +99,27 @@ background: #FFF8F3;
     text-align: center;
     font-size: 18px;
     line-height: 30px;
+    font-weight: normal;
+}
+.about-info-container{
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+}
+.about-info{
+   margin-top: 20px;
+text-align: center;
+color: #757575;
+line-height: 10px;
+}
+.info-title{
+font-weight: normal;
+}
+.info-description{
+font-size: 20px;
+}
+/* what i do section */
+#what-i-do-description{
+padding: 30px 150px;
+
 }
