--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -118,8 +118,41 @@ font-weight: normal;
 .info-description{
 font-size: 20px;
 }
+
+main section{
+    margin-top: 130px;
+}
+
 /* what i do section */
 #what-i-do-description{
 padding: 30px 150px;
+
+}
+.skills-container{
+display: flex;
+gap: 24px;
+}
+.skills{
+    padding: 30px;
+   
+    border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skills-description{
+color: #757575;
+}
+
+/* resume section */
+.resume-container{
+
+}
+.resume-column{
+
+}
+.resume-column-title{
+color: #474747;
+font-size: 30px;
+font-weight: 700;
 
 }
