--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -145,6 +145,8 @@ color: #757575;
 
 /* resume section */
 .resume-container{
+display: flex;
+gap: 70px;
 
 }
 .resume-column{
@@ -154,5 +156,35 @@ color: #757575;
 color: #474747;
 font-size: 30px;
 font-weight: 700;
+margin-top: 30px;
+}
+.resume-items-title{
+color: #474747;
+font-size: 25px;
+font-weight: 700;
+margin-bottom: 10px;
+}
+.resume-items-description{
+color: #757575;
+font-size: 16px;
+font-weight: 400;
+line-height: 28px;
+margin-top: 0px;
+margin-bottom: 20px;
+}
+.resume-items-institute{
+color:  #757575;
+font-size: 20px;
+font-weight: 700;
 
+}
+
+.resume-container hr{
+    margin-top: 30px;
+    margin-bottom:30px;
+}
+.download-cv
+{
+    text-align: center;
+    margin-top: 50px;
 }
