--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -188,3 +188,10 @@ font-weight: 700;
     text-align: center;
     margin-top: 50px;
 }
+/* footer section */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+}
