--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,7 +79,7 @@ nav a {
 .profile-photo {
   width: 550px;
   height: 650px;
-  flex-shrink: 0;
+  padding-top: 5px;
 }
 .banner-content {
   max-width: 550px;
@@ -227,4 +227,53 @@ textarea {
 }
 #f-title {
   margin-bottom: 20px;
+}
+
+/* responsive section */
+
+/* mobile */
+
+@media screen and (max-width: 576px) {
+  .header {
+    background-image: none;
+  }
+  #what-i-do-description,
+  .banner {
+    padding: 20px;
+  }
+  .profile-photo {
+    width: 60%;
+    height: 50%;
+    margin-bottom: 180px;
+  }
+  .btn-primary {
+    margin-bottom: 15px;
+  }
+  nav > ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .skills-container,
+  .resume-container,
+  footer,
+  .about-info-container,
+  nav,
+  .banner {
+    flex-direction: column;
+  }
+  footer,
+  .about {
+    padding-top: 150px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+  }
+  .footer-column {
+    width: 100%;
+  }
+  .contact input[type="text"],
+  .contact input[type="email"],
+  textarea {
+    width: 80%;
+  }
 }
